[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
csv.workspace = true
log.workspace = true
models ={ path = "../models" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-logger.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
